# bellediracx

./: README.md  environment.yml  setup.cfg
src/bellediracx/db/: __init__.py  db.py  schema.py
src/bellediracx/db/production/: db.py  schema.py
src/bellediracx/db/rucio/: db.py  schema.py
src/bellediracx/routers/: __init__.py  b2ruciodatamanager.py  production.py
tests/db/: test_rucioDB.py
