[metadata]
name = bellediracx
author = Belle II
# author_email = distutils-sig@python.org
# description = Easily download, build, install, upgrade, and uninstall Python packages
# long_description = file:README.rst
# url = https://github.com/pypa/setuptools
# classifiers =
# keywords = CPAN PyPI distutils eggs package management
# project_urls =
# 	Documentation = https://setuptools.pypa.io/
# 	Changelog = https://setuptools.pypa.io/en/stable/history.html

[options]
packages = find_namespace:
package_dir =
    = src
python_requires = >=3.10
install_requires =

[options.packages.find]
where = src

[options.extras_require]
testing =
	pytest >= 6

testing-integration =
	pytest

docs =
	sphinx >= 3.5

[options.entry_points]
console_scripts =
    bellediracx = bellediracx.cli:app
diracx.dbs =
       RucioDB = bellediracx.db.rucio.db:RucioDB
       ProductionDB = bellediracx.db.production.db:ProductionDB
#	AuthDB = bellediracx.db:AuthDB
#	JobDB = bellediracx.db:JobDB
diracx.services =
	b2rucio = bellediracx.routers.b2ruciodatamanager:router
	production = bellediracx.routers.production:router
